--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
         Sites
     </h2>
     <ul>
+<li>
+<a href="http://www.lorcanmcdonald.com">
+www.lorcanmcdonald.com
+</a>:
+About Lorcan McDonald</li>
         <li>
             <a href="http://www.7800beats.com">
                 7800beats.com
