--- a/index.html
+++ b/index.html
@@ -1,29 +1,1 @@
-<html>
-<body>
-<h1>
-    Lorcan McDonald
-</h1>
-    <h2>
-        Sites
-    </h2>
-    <ul>
-<li>
-<a href="http://www.lorcanmcdonald.com">
-www.lorcanmcdonald.com
-</a>:
-About Lorcan McDonald</li>
-        <li>
-            <a href="http://www.7800beats.com">
-                7800beats.com
-            </a>:
-            Home page for my music projects
-        </li>
-        <li>
-            <a href="http://www.redbrick.dcu.ie/~lorcan/">
-            Redbrick
-            </a>:
-            My homepage at the DCU Networking Society
-        </li>
-    </ul>
-</body>
-</html>
+<meta http-equiv="refresh" content="0;URL='http://example.com/'">
