--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0;URL='http://example.com/'">
+<meta http-equiv="refresh" content="0;URL='http://lorcanmcdonald.com/'">
